--- a/_posts/2016-05-06-fizzbuzz.md
+++ b/_posts/2016-05-06-fizzbuzz.md
@@ -1,5 +1,78 @@
 ---
 layout: post
-title: FizzBuzz Three Ways
+title: FizzBuzz
 ---
-#FizzBuzz is a popular test for people learning a new programming language, as well as a favorite question interviewers use to weed out potential employees.
+FizzBuzz is a great question to practice with because it allows us to play around with different building blocks of a language and come up with different solutions.
+
+The problem goes like this: write a program that displays 1 through 100.  However, if a number is divisible by 3, display Fizz, if a number is divisible by 5, display Buzz.  Lastly, if a number is divisible by 3 and 5, display FizzBuzz.
+
+I'm going to first show two basic solutions in Ruby and JavaScript, then a couple variations.
+
+**Ruby #1**
+
+{% highlight ruby %}
+counter = 1
+while counter <= 100
+  if (counter % 3 == 0) && (counter % 5 == 0)
+    puts 'FizzBuzz'
+  elsif (counter % 3 == 0)
+    puts 'Fizz'
+  elsif (counter % 5 == 0)
+    puts 'Buzz'
+  else
+    puts counter
+  end
+  counter += 1
+end
+{% endhighlight %}
+
+First we set a variable called counter that we'll use inside the while loop to cycle through 1 to 100, incrementing by 1 each time.  Inside the while loop, we first check to see if counter is divisible by both 3 and 5, then by just 3, then by just 5, displaying either FizzBuzz, Fizz, or Buzz, respectively.  If none of those conditions are met, we print counter.
+
+This is what I would consider a very beginner solution and there are definitely ways to improve on it, which we'll get to later on.
+
+**JavaScript #1**
+
+{% highlight js %}
+for(counter = 1 ; counter <= 100 ; counter++){
+	if(counter % 3 === 0 && counter % 5 === 0){
+		console.log("FizzBuzz");
+	}else if(counter % 3 === 0){
+		console.log("Fizz");
+	}else if(counter % 5 === 0){
+		console.log("Buzz");
+	}else{
+		console.log(counter);
+	}
+}
+{% endhighlight %}
+
+In this first JavaScript example, we're doing essentially the same thing: setting a counter variable to loop through 1 to 100, incrementing by 1, and then checking our conditions to print either FizzBuzz, Fizz, Buzz, or the counter.
+
+In the next examples, though, we're going to refactor everything a little.
+
+**Ruby #2**
+
+{% highlight ruby %}
+1.upto(100).each do |counter|
+   string = ''
+   string += 'Fizz' if counter % 3 == 0
+   string += 'Buzz' if counter % 5 == 0
+   string.empty? ? puts(counter) : puts(string)
+end
+{% endhighlight%}
+
+Here I'm trying to make the code a little more "Rubyish".  The elements are all the same, but instead of a while loop, we're using the Ruby method `upto` to set our starting and ending numbers.  It then uses `each` to take each number and set it to 'counter' and then passes it into our block of code.  Inside the block, we first set the variable string to an empty string.  Then we check to see if counter is divisible by 3 and if it is, we add 'Fizz' to our empty string.  After that, we check to see if counter is divisible by 5, and add 'Buzz' to the string.  This means, if counter is only divisible by 3 or 5, we'll end up with either 'Fizz' or 'Buzz', but if it's divisible by both, we'll get 'FizzBuzz'.  Lastly, we check to to see if the variable string is empty.  If it is (i.e. counter wasn't divisible by 3 or 5), we print out the number.  If it's not empty, we print our string.  
+
+
+**Javascript #2**
+
+{% highlight js %}
+for(counter = 1 ; counter <= 100 ; counter++){
+	string = "";
+	if(counter % 3 === 0){string += "Fizz"}
+	if(counter % 5 === 0){string += "Buzz"}
+	console.log(string || counter);
+}
+{% endhighlight %}
+
+First we set up a for loop, just like in the first solution.  Then we set up an empty string, called 'string', like in the Ruby example, and run similar logic to add Fizz or Buzz to it.  However, JavaScript lets us run the logic a little differently to print out the string or counter.  Inside `console.log` we check if `string` is true (an empty string returns false).  So, if there's anything inside the string, it will print out, otherwise, it will print out our number. 
